--- a/pages/index.html
+++ b/pages/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Pages</title>
   
-    <meta name="author" content="Firstname Lastname">
+    <meta name="author" content="taoxiaoseng">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
@@ -31,7 +31,7 @@
     <div class="navbar">
       <div class="navbar-inner">
         <div class="container">
-          <a class="brand" href="/">Blog Title</a>
+          <a class="brand" href="/">淘小僧</a>
           <ul class="nav">
             
               
@@ -90,21 +90,7 @@
   
 
 
-  <li><a href="/about">About Me</a></li>
-
-
-
-  
-
-
-  <li><a href="/archive">Archive</a></li>
-
-
-
-  
-
-
-  <li><a href="/categories">Categories</a></li>
+  <li><a href="/pages">Pages</a></li>
 
 
 
@@ -118,7 +104,7 @@
   
 
 
-  <li><a href="/pages">Pages</a></li>
+  <li><a href="/archive">Archive</a></li>
 
 
 
@@ -129,6 +115,20 @@
 
 
 
+  
+
+
+  <li><a href="/categories">Categories</a></li>
+
+
+
+  
+  <li class="active"><a href="/about" class="active">About Me</a></li>
+
+
+
+
+
 </ul>
   </div>
 </div>
@@ -136,7 +136,7 @@
       </div>
 
       <footer>
-        <p>&copy; Firstname Lastname 2013 
+        <p>&copy; taoxiaoseng 2013 
           with help from <a href="http://github.com/wendal/gor" target="_blank" title="Gor -- Fast Blog">Gor</a>
           and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
 		  and Idea from <a href="http://ruhoh.com" target="_blank" title="The Definitive Technical Blogging Framework">ruhoh</a>
