update website data

--- a/pages/index.html
+++ b/pages/index.html
@@ -88,9 +88,30 @@
 <ul>
 
   
+  <li class="active"><a href="/categories" class="active">Categories</a></li>
+
+
+
+
+
+  
 
 
   <li><a href="/pages">Pages</a></li>
+
+
+
+  
+
+
+  <li><a href="/tags">Tags</a></li>
+
+
+
+  
+
+
+  <li><a href="/about">About Me</a></li>
 
 
 
@@ -105,27 +126,6 @@
 
 
   <li><a href="/archive">Archive</a></li>
-
-
-
-  
-
-
-  <li><a href="/tags">Tags</a></li>
-
-
-
-  
-
-
-  <li><a href="/categories">Categories</a></li>
-
-
-
-  
-  <li class="active"><a href="/about" class="active">About Me</a></li>
-
-
 
 
 
