--- a/pages/index.html
+++ b/pages/index.html
@@ -90,21 +90,7 @@
   
 
 
-  <li><a href="/pages">Pages</a></li>
-
-
-
-  
-
-
   <li><a href="/tags">Tags</a></li>
-
-
-
-  
-
-
-  <li><a href="/about">About Me</a></li>
 
 
 
@@ -118,14 +104,28 @@
   
 
 
-  <li><a href="/categories">Categories</a></li>
+  <li><a href="/pages">Pages</a></li>
 
 
 
   
-  <li class="active"><a href="/archive" class="active">Archive</a></li>
 
 
+  <li><a href="/archive">Archive</a></li>
+
+
+
+  
+
+
+  <li><a href="/about">About Me</a></li>
+
+
+
+  
+
+
+  <li><a href="/categories">Categories</a></li>
 
 
 
