--- a/pages/index.html
+++ b/pages/index.html
@@ -88,6 +88,27 @@
 <ul>
 
   
+  <li class="active"><a href="/categories" class="active">Categories</a></li>
+
+
+
+
+
+  
+
+
+  <li><a href="/pages">Pages</a></li>
+
+
+
+  
+
+
+  <li><a href="/">首页</a></li>
+
+
+
+  
 
 
   <li><a href="/tags">Tags</a></li>
@@ -105,27 +126,6 @@
 
 
   <li><a href="/archive">Archive</a></li>
-
-
-
-  
-
-
-  <li><a href="/categories">Categories</a></li>
-
-
-
-  
-
-
-  <li><a href="/">首页</a></li>
-
-
-
-  
-
-
-  <li><a href="/pages">Pages</a></li>
 
 
 
