--- a/pages/index.html
+++ b/pages/index.html
@@ -88,16 +88,9 @@
 <ul>
 
   
-  <li class="active"><a href="/categories" class="active">Categories</a></li>
 
 
-
-
-
-  
-
-
-  <li><a href="/pages">Pages</a></li>
+  <li><a href="/tags">Tags</a></li>
 
 
 
@@ -111,7 +104,7 @@
   
 
 
-  <li><a href="/tags">Tags</a></li>
+  <li><a href="/categories">Categories</a></li>
 
 
 
@@ -126,6 +119,13 @@
 
 
   <li><a href="/archive">Archive</a></li>
+
+
+
+  
+  <li class="active"><a href="/pages" class="active">Pages</a></li>
+
+
 
 
 
