--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>首页</title>
+    <title>Start Point</title>
   
     <meta name="author" content="taoxiaoseng">
 
@@ -79,13 +79,13 @@
       <div class="content">
         
 <div class="page-header">
-  <h1>首页 </h1>
+  <h1>Start Point </h1>
 </div>
 
 <div class="row">
   <div class="span12">
     
-
+It's copy of my steps.
 <h3>最近更新</h3>
 
 
