--- a/pages/index.html
+++ b/pages/index.html
@@ -90,14 +90,28 @@
   
 
 
-  <li><a href="/tags">Tags</a></li>
+  <li><a href="/about">About Me</a></li>
 
 
 
   
 
 
-  <li><a href="/">首页</a></li>
+  <li><a href="/tags">Tags</a></li>
+
+
+
+  
+  <li class="active"><a href="/archive" class="active">Archive</a></li>
+
+
+
+
+
+  
+
+
+  <li><a href="/pages">Pages</a></li>
 
 
 
@@ -111,21 +125,7 @@
   
 
 
-  <li><a href="/about">About Me</a></li>
-
-
-
-  
-
-
-  <li><a href="/archive">Archive</a></li>
-
-
-
-  
-  <li class="active"><a href="/pages" class="active">Pages</a></li>
-
-
+  <li><a href="/">Start Point</a></li>
 
 
 
