--- a/pages/index.html
+++ b/pages/index.html
@@ -90,19 +90,19 @@
   
 
 
-  <li><a href="/about">About Me</a></li>
-
-
-
-  
-
-
   <li><a href="/tags">Tags</a></li>
 
 
 
   
-  <li class="active"><a href="/archive" class="active">Archive</a></li>
+
+
+  <li><a href="/categories">Categories</a></li>
+
+
+
+  
+  <li class="active"><a href="/about" class="active">About Me</a></li>
 
 
 
@@ -118,14 +118,14 @@
   
 
 
-  <li><a href="/categories">Categories</a></li>
+  <li><a href="/">Start Point</a></li>
 
 
 
   
 
 
-  <li><a href="/">Start Point</a></li>
+  <li><a href="/archive">Archive</a></li>
 
 
 
