--- a/pages/index.html
+++ b/pages/index.html
@@ -90,28 +90,21 @@
   
 
 
-  <li><a href="/tags">Tags</a></li>
-
-
-
-  
-
-
-  <li><a href="/categories">Categories</a></li>
-
-
-
-  
-  <li class="active"><a href="/about" class="active">About Me</a></li>
-
-
-
-
-
-  
-
-
   <li><a href="/pages">Pages</a></li>
+
+
+
+  
+
+
+  <li><a href="/about">About Me</a></li>
+
+
+
+  
+
+
+  <li><a href="/archive">Archive</a></li>
 
 
 
@@ -125,7 +118,14 @@
   
 
 
-  <li><a href="/archive">Archive</a></li>
+  <li><a href="/categories">Categories</a></li>
+
+
+
+  
+  <li class="active"><a href="/tags" class="active">Tags</a></li>
+
+
 
 
 
