--- a/pages/index.html
+++ b/pages/index.html
@@ -90,13 +90,6 @@
   
 
 
-  <li><a href="/about">About Me</a></li>
-
-
-
-  
-
-
   <li><a href="/">Start Point</a></li>
 
 
@@ -104,12 +97,12 @@
   
 
 
-  <li><a href="/categories">Categories</a></li>
+  <li><a href="/tags">Tags</a></li>
 
 
 
   
-  <li class="active"><a href="/tags" class="active">Tags</a></li>
+  <li class="active"><a href="/categories" class="active">Categories</a></li>
 
 
 
@@ -119,6 +112,13 @@
 
 
   <li><a href="/pages">Pages</a></li>
+
+
+
+  
+
+
+  <li><a href="/about">About Me</a></li>
 
 
 
