--- a/pages/index.html
+++ b/pages/index.html
@@ -90,14 +90,7 @@
   
 
 
-  <li><a href="/pages">Pages</a></li>
-
-
-
-  
-
-
-  <li><a href="/about">About Me</a></li>
+  <li><a href="/categories">Categories</a></li>
 
 
 
@@ -111,21 +104,28 @@
   
 
 
-  <li><a href="/">Start Point</a></li>
-
-
-
-  
-
-
   <li><a href="/tags">Tags</a></li>
 
 
 
   
-  <li class="active"><a href="/categories" class="active">Categories</a></li>
 
 
+  <li><a href="/">Start Point</a></li>
+
+
+
+  
+  <li class="active"><a href="/about" class="active">About Me</a></li>
+
+
+
+
+
+  
+
+
+  <li><a href="/pages">Pages</a></li>
 
 
 
