--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <![endif]-->
 
     <!-- Le styles -->
-    <link href="/assets/twitter/stylesheets/bootstrap.min.css" type="text/css" rel="stylesheet" media="all">
-<link href="/assets/twitter/stylesheets/style.css" type="text/css" rel="stylesheet" media="all">
-<link href="/assets/twitter/widgets/google_prettify/stylesheets/twitter-bootstrap.css" type="text/css" rel="stylesheet" media="all">
+    <link href="42.121.114.240/assets/twitter/stylesheets/bootstrap.min.css" type="text/css" rel="stylesheet" media="all">
+<link href="42.121.114.240/assets/twitter/stylesheets/style.css" type="text/css" rel="stylesheet" media="all">
+<link href="42.121.114.240/assets/twitter/widgets/google_prettify/stylesheets/twitter-bootstrap.css" type="text/css" rel="stylesheet" media="all">
  
     
     <!-- Le fav and touch icons -->
