--- a/pages/index.html
+++ b/pages/index.html
@@ -88,9 +88,16 @@
 <ul>
 
   
+  <li class="active"><a href="/tags" class="active">Tags</a></li>
 
 
-  <li><a href="/archive">Archive</a></li>
+
+
+
+  
+
+
+  <li><a href="/pages">Pages</a></li>
 
 
 
@@ -104,21 +111,14 @@
   
 
 
-  <li><a href="/tags">Tags</a></li>
-
-
-
-  
-  <li class="active"><a href="/about" class="active">About Me</a></li>
-
-
+  <li><a href="/about">About Me</a></li>
 
 
 
   
 
 
-  <li><a href="/pages">Pages</a></li>
+  <li><a href="/archive">Archive</a></li>
 
 
 
